--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <telegrambots.version>6.9.7.1</telegrambots.version>
         <discord4j.version>3.2.6</discord4j.version>
         <junit.version>4.13.2</junit.version>
+
+        <netty-all.version>4.1.109.Final</netty-all.version>
+        <commons-codec.version>1.16.1</commons-codec.version>
+        <reactor-netty-http.version>1.1.18</reactor-netty-http.version>
     </properties>
 
     <dependencies>
@@ -56,6 +60,24 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty-all}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.projectreactor.netty</groupId>
+                <artifactId>reactor-netty-http</artifactId>
+                <version>${reactor-netty-http.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
